Fix footer spacing

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -124,8 +124,8 @@ footer {
     text-align: center;
     font-size: 15px;
     color: rgb(113 127 135);
-    padding-block-start: 30px;
-    padding-block-end: 20px;
+    //padding-block-start: 30px;
+    //padding-block-end: 20px;
     background-color: var(--header-background-color);
 }
 footer p {
