--- a/sass/garden.scss
+++ b/sass/garden.scss
@@ -43,6 +43,10 @@ li.g-links{
     padding-block: 5px;
     /* margin-block: 0; */
 }
+.garden-section a {
+    text-decoration: none;
+}
+
 .garden-intro {
     background-color: #d8f1d4;
     padding: 10px;
